--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,3 @@
-.main-content{
-    margin-top: 6rem;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-    margin-bottom: 4rem;
+.main-content {
+  margin: 8rem 2.5rem;
 }
